feat: implementar modelo de dominio completo segun especificacion tecnica
- Refactorizar Usuario: campos dni, telefono, imagen, googleId, emailValidado, tokenRecuperacion
- Crear subtipos: Alumno, Docente (con habilitado, consentimientoClon, aniosExperiencia), Administrador
- Crear TituloDocente, Rol, UsuarioRol, Sesion
- Refactorizar Curso: DocenteCurso M:N, Modalidad, imagen, mesesAcceso, fechas inscripcion
- Convertir TipoMaterial de enum a entidad catalogo
- Refactorizar Material: rutaArchivo, contenido, generadoPorIA, duracion, autor
- Crear TerminoGlosario (separado de TipoMaterial)
- Refactorizar Inscripcion: fechaVencimientoAcceso, observaciones, Certificado
- Crear modulo Clases: ClaseEnVivo, ClaseClonIA con estados catalogo
- Crear modulo Foro: ConsultaForo, RespuestaForo
- Crear modulo Evaluacion: Pool, Pregunta, OpcionRespuesta, Autoevaluacion, IntentoAutoevaluacion, RespuestaIntento
- Crear modulo Pagos: EstadoPago, MetodoPago, Pago, Comprobante, Descuento, Certificado
- Crear modulo Sistema: TipoAccionAuditoria, Auditoria, TipoReporte, Reporte, Configuracion
- Actualizar SemillaService para crear todos los catalogos e instancias de subtipos
- Crear todos los repositorios JPA correspondientes